--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="IDN Creatives offers high-quality video editing, motion graphics, and creative services for brands and individuals. Bring your vision to life today!"
     />
+      <link rel="icon" type="image/x-icon" href="./assets/idn_creatives_logo_white.svg">
     <link rel="stylesheet" href="styles.css" />
     <title>IDN Creatives</title>
   </head>
